使用 Colab 创建而成

--- a/colab.ipynb
+++ b/colab.ipynb
@@ -51,10 +51,61 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
-        "id": "NRqyxme1ZCyZ"
+        "id": "NRqyxme1ZCyZ",
+        "outputId": "9e957bc0-b981-4e41-b03c-dbaf15134f39",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 453
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "## 📦 Installing required packages...\nThis may take a minute. Please wait..."
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tesseract-ocr is already the newest version (4.1.1-2.1build1).\n",
+            "0 upgraded, 0 newly installed, 0 to remove and 38 not upgraded.\n",
+            "  \u001b[31m×\u001b[0m No solution found when resolving dependencies:\n",
+            "\u001b[31m  ╰─▶ \u001b[0mBecause tensorflow-text==2.17.0 has no wheels with a matching Python\n",
+            "\u001b[31m      \u001b[0mABI tag (e.g., `\u001b[36mcp312\u001b[39m`) and you require tensorflow-text==2.17.0, we can\n",
+            "\u001b[31m      \u001b[0mconclude that your requirements are unsatisfiable.\n",
+            "\n",
+            "\u001b[31m      \u001b[0m\u001b[36m\u001b[1mhint\u001b[0m\u001b[39m\u001b[1m:\u001b[0m You require \u001b[36mCPython 3.12\u001b[39m (`\u001b[36mcp312\u001b[39m`), but we only found wheels for\n",
+            "\u001b[31m      \u001b[0m`\u001b[36mtensorflow-text\u001b[39m` (\u001b[36mv2.17.0\u001b[39m) with the following Python ABI tags: `\u001b[36mcp39\u001b[39m`,\n",
+            "\u001b[31m      \u001b[0m`\u001b[36mcp310\u001b[39m`, `\u001b[36mcp311\u001b[39m`\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "✅ **Installation complete!**"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "\n---\n### 🔄 Restarting Runtime\nTo finalize the installation, we need to restart the Colab runtime.\n\n> **Why?** TensorFlow and system-level packages need a restart to properly initialize with new dependencies.\n\n⏳ Restarting in 3 seconds...\n\n✅ Restartng done! **Please continue to the following cells**\n"
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
         "# @title Dependencies\n",
         "from IPython.display import Markdown\n",
@@ -63,9 +114,14 @@
         "\n",
         "display(Markdown(\"## 📦 Installing required packages...\\nThis may take a minute. Please wait...\"))\n",
         "\n",
-        "!sudo apt -qq install tesseract-ocr\n",
-        "!uv pip install -q --system \"tensorflow[and-cuda]==2.17.0\" \"tensorflow-text==2.17.0\" pytesseract \"tf-keras==2.17.0\" \"python-doctr[tf,viz]==0.10.0\"\n",
+        "# system packages\n",
+        "!sudo apt -qq install tesseract-ocr poppler-utils\n",
+        "\n",
+        "# NOTE: Colab may run Python 3.12; tensorflow-text 2.17 has no cp312 wheel. Use 2.16.1 which is compatible with a wider set of Python ABIs.\n",
+        "!uv pip install -q --system \"tensorflow[and-cuda]==2.16.1\" \"tensorflow-text==2.16.1\" pytesseract \"tf-keras==2.17.0\" \"python-doctr[tf,viz]==0.10.0\"\n",
+        "\n",
         "display(Markdown(\"✅ **Installation complete!**\"))\n",
+        "\n",
         "time.sleep(1)\n",
         "\n",
         "display(Markdown(\"\"\"\n",
@@ -88,12 +144,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "cellView": "form",
-        "id": "2xt-15DJo4KK"
+        "id": "2xt-15DJo4KK",
+        "outputId": "aa560152-850c-4802-82a7-b4c4c1ab903b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 395
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'doctr'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-4102402579.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# @title docTR Preparation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mdoctr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mio\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDocumentFile\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdoctr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mocr_predictor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mpredictor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mocr_predictor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpretrained\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'doctr'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ],
       "source": [
         "# @title docTR Preparation\n",
         "\n",
