--- a/colab.ipynb
+++ b/colab.ipynb
@@ -52,11 +52,11 @@
       "execution_count": null,
       "metadata": {
         "id": "NRqyxme1ZCyZ",
-        "outputId": "9e957bc0-b981-4e41-b03c-dbaf15134f39",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 453
-        }
+          "height": 777
+        },
+        "outputId": "2bbc43fd-3355-4452-d919-1fd95df58ffc"
       },
       "outputs": [
         {
@@ -74,14 +74,31 @@
           "name": "stdout",
           "text": [
             "tesseract-ocr is already the newest version (4.1.1-2.1build1).\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 38 not upgraded.\n",
+            "The following NEW packages will be installed:\n",
+            "  poppler-utils\n",
+            "0 upgraded, 1 newly installed, 0 to remove and 38 not upgraded.\n",
+            "Need to get 186 kB of archives.\n",
+            "After this operation, 697 kB of additional disk space will be used.\n",
+            "debconf: unable to initialize frontend: Dialog\n",
+            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 78, <> line 1.)\n",
+            "debconf: falling back to frontend: Readline\n",
+            "debconf: unable to initialize frontend: Readline\n",
+            "debconf: (This frontend requires a controlling tty.)\n",
+            "debconf: falling back to frontend: Teletype\n",
+            "dpkg-preconfigure: unable to re-open stdin: \n",
+            "Selecting previously unselected package poppler-utils.\n",
+            "(Reading database ... 126675 files and directories currently installed.)\n",
+            "Preparing to unpack .../poppler-utils_22.02.0-2ubuntu0.10_amd64.deb ...\n",
+            "Unpacking poppler-utils (22.02.0-2ubuntu0.10) ...\n",
+            "Setting up poppler-utils (22.02.0-2ubuntu0.10) ...\n",
+            "Processing triggers for man-db (2.10.2-1) ...\n",
             "  \u001b[31m×\u001b[0m No solution found when resolving dependencies:\n",
-            "\u001b[31m  ╰─▶ \u001b[0mBecause tensorflow-text==2.17.0 has no wheels with a matching Python\n",
-            "\u001b[31m      \u001b[0mABI tag (e.g., `\u001b[36mcp312\u001b[39m`) and you require tensorflow-text==2.17.0, we can\n",
+            "\u001b[31m  ╰─▶ \u001b[0mBecause tensorflow-text==2.16.1 has no wheels with a matching Python\n",
+            "\u001b[31m      \u001b[0mABI tag (e.g., `\u001b[36mcp312\u001b[39m`) and you require tensorflow-text==2.16.1, we can\n",
             "\u001b[31m      \u001b[0mconclude that your requirements are unsatisfiable.\n",
             "\n",
             "\u001b[31m      \u001b[0m\u001b[36m\u001b[1mhint\u001b[0m\u001b[39m\u001b[1m:\u001b[0m You require \u001b[36mCPython 3.12\u001b[39m (`\u001b[36mcp312\u001b[39m`), but we only found wheels for\n",
-            "\u001b[31m      \u001b[0m`\u001b[36mtensorflow-text\u001b[39m` (\u001b[36mv2.17.0\u001b[39m) with the following Python ABI tags: `\u001b[36mcp39\u001b[39m`,\n",
+            "\u001b[31m      \u001b[0m`\u001b[36mtensorflow-text\u001b[39m` (\u001b[36mv2.16.1\u001b[39m) with the following Python ABI tags: `\u001b[36mcp39\u001b[39m`,\n",
             "\u001b[31m      \u001b[0m`\u001b[36mcp310\u001b[39m`, `\u001b[36mcp311\u001b[39m`\n"
           ]
         },
@@ -114,14 +131,9 @@
         "\n",
         "display(Markdown(\"## 📦 Installing required packages...\\nThis may take a minute. Please wait...\"))\n",
         "\n",
-        "# system packages\n",
-        "!sudo apt -qq install tesseract-ocr poppler-utils\n",
-        "\n",
-        "# NOTE: Colab may run Python 3.12; tensorflow-text 2.17 has no cp312 wheel. Use 2.16.1 which is compatible with a wider set of Python ABIs.\n",
-        "!uv pip install -q --system \"tensorflow[and-cuda]==2.16.1\" \"tensorflow-text==2.16.1\" pytesseract \"tf-keras==2.17.0\" \"python-doctr[tf,viz]==0.10.0\"\n",
-        "\n",
+        "!sudo apt -qq install tesseract-ocr\n",
+        "!uv pip install -q --system \"tensorflow[and-cuda]==2.17.0\" \"tensorflow-text==2.17.0\" pytesseract \"tf-keras==2.17.0\" \"python-doctr[tf,viz]==0.10.0\"\n",
         "display(Markdown(\"✅ **Installation complete!**\"))\n",
-        "\n",
         "time.sleep(1)\n",
         "\n",
         "display(Markdown(\"\"\"\n",
@@ -147,11 +159,11 @@
       "execution_count": 1,
       "metadata": {
         "id": "2xt-15DJo4KK",
-        "outputId": "aa560152-850c-4802-82a7-b4c4c1ab903b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 395
-        }
+        },
+        "outputId": "faeb96ed-2db3-4b07-f0eb-008f82b34ab5"
       },
       "outputs": [
         {
